--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>M.Bellucci</title>
   <link rel="stylesheet" href="/assets/stylesheets/main.css" type="text/css">
+  <link rel="stylesheet" href="/assets/stylesheets/reset.css" type="text/css">
 </head>
 
 <body>
