--- a/index.html
+++ b/index.html
@@ -3,37 +3,48 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>M.Bellucci</title>
-  <link rel="stylesheet" href="/assets/stylesheets/main.css" type="text/css">
   <link rel="stylesheet" href="/assets/stylesheets/reset.css" type="text/css">
+  <link rel="stylesheet" href="/assets/stylesheets/main.css" type="text/css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Ubuntu+Mono" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald" type="text/css">
 </head>
 
 <body>
-  <h1>Marcos Bellucci</h1>
+  <div id="presentation-card">
+    <h1>Marcos Bellucci</h1>
+    <a class="hire-me-link">Hire Me!</a>
 
-  <p>
-    I'm a software developer from Montevideo, Uruguay working on RoR since 2014. I enjoy writing, sharing, discussing code and learning everyday. I beleive agile teams is the real formula to build reliable software.
-  </p>
+    <p>
+      I'm a software developer from Montevideo, Uruguay working on RoR since 2014.
+    </p>
+    <p>
+      I beleive agile teams is the real formula to build reliable software.
+    </p>
+    <p>
+      I enjoy writing, sharing, discussing code and learning everyday.
+    </p>
 
-  <ul class="social-icons">
-    <li>
-      <a href="#"> <img src="assets/images/Twitter.png" alt="twitter"> </a>
-    </li>
-    <li>
-      <a href="#"> <img src="assets/images/GitHub.png" alt="github"> </a>
-    </li>
-    <li>
-      <a href="#"> <img src="assets/images/LinkedIn.png" alt="linkedin"> </a>
-    </li>
-    <li>
-      <a href="#"> <img src="assets/images/DailyBooth.png" alt="resume"> </a>
-    </li>
-    <li>
-      <a href="#"> <img src="assets/images/Flickr.png" alt="sample code"> </a>
-    </li>
-    <li>
-      <a href="#"> <img src="assets/images/Dribbble.png" alt="meetup groups"> </a>
-    </li>
-  </ul>
+    <ul class="social-icons">
+      <li>
+        <a href="https://twitter.com/delbetu"> <img src="assets/images/Twitter.png" alt="twitter"> </a>
+      </li>
+      <li>
+        <a href="https://github.com/delbetu"> <img src="assets/images/GitHub.png" alt="github"> </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918"> <img src="assets/images/LinkedIn.png" alt="linkedin"> </a>
+      </li>
+      <li>
+        <a href="https://github.com/delbetu/resume/blob/master/resume.pdf"> <img src="assets/images/DailyBooth.png" alt="resume"> </a>
+      </li>
+      <li>
+        <a href="https://github.com/delbetu/todo-app"> <img src="assets/images/Flickr.png" alt="sample code"> </a>
+      </li>
+      <li>
+        <a href="http://www.meetup.com/es-ES/members/87421642/"> <img src="assets/images/Dribbble.png" alt="meetup groups"> </a>
+      </li>
+    </ul>
+  </div>
 </body>
 
 </html>
