Add contact form

--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
       </li>
     </ul>
   </div>
+
+  <div id="contact-form" class="hide">
+    <div class="row">
+      <label for="email">Email</label>
+      <input type="text" name="message-email" id="email" value="">
+    </div>
+
+    <div class="row">
+      <label for="subject">Title</label>
+      <input type="text" name="message-subject" id="subject" value="">
+    </div>
+
+    <label for="body">Message</label>
+    <textarea name="message-body" id="body" rows="8" cols="40"></textarea>
+
+    <a href="#" class="submit">Send</a>
+  </div>
 </body>
 
 </html>
