Change text 'hire me' for 'contact me'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="presentation-card">
     <h1>Marcos Bellucci</h1>
-    <a href="#" class="hire-me" rel="#contact-form">Hire Me!</a>
+    <a href="#" class="hire-me" rel="#contact-form">Contact Me!</a>
 
     <p>
       I'm a software developer from Montevideo, Uruguay working on RoR since 2014.
