--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       I'm a software developer from Montevideo, Uruguay working on RoR since 2014.
     </p>
     <p>
-      I beleive agile teams is the real formula to build reliable software.
+      I believe agile methodologies are the real formula to build reliable software.
     </p>
     <p>
       I enjoy writing, sharing, discussing code and learning everyday.
