Fix submit form callback url.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: default
   <textarea name="message-body" rows="8" cols="40"></textarea>
 
   <input type="submit" class="submit" value="Send"></input>
-  <input type="hidden" name="_next" value="//localhost:4000/"></input>
+  <input type="hidden" name="_next" value="{{ page.url }}"></input>
 </form>
 
 <script type="text/javascript" charset="utf-8">
