Make social links to open in new tab

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@ layout: default
 
   <ul class="social-icons">
     <li>
-      <a href="https://twitter.com/delbetu"> <img src="assets/images/Twitter.png" alt="twitter"> </a>
+      <a target="_blank" href="https://twitter.com/delbetu"> <img src="assets/images/Twitter.png" alt="twitter"> </a>
     </li>
     <li>
-      <a href="https://github.com/delbetu"> <img src="assets/images/GitHub.png" alt="github"> </a>
+      <a target="_blank" href="https://github.com/delbetu"> <img src="assets/images/GitHub.png" alt="github"> </a>
     </li>
     <li>
-      <a href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918"> <img src="assets/images/LinkedIn.png" alt="linkedin"> </a>
+      <a target="_blank" href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918"> <img src="assets/images/LinkedIn.png" alt="linkedin"> </a>
     </li>
     <li>
-      <a href="https://github.com/delbetu/resume/blob/master/resume.pdf"> <img src="assets/images/DailyBooth.png" alt="resume"> </a>
+      <a target="_blank" href="https://github.com/delbetu/resume/blob/master/resume.pdf"> <img src="assets/images/DailyBooth.png" alt="resume"> </a>
     </li>
     <li>
-      <a href="https://github.com/delbetu/todo-app"> <img src="assets/images/Flickr.png" alt="sample code"> </a>
+      <a target="_blank" href="https://github.com/delbetu/todo-app"> <img src="assets/images/Flickr.png" alt="sample code"> </a>
     </li>
     <li>
-      <a href="http://www.meetup.com/es-ES/members/87421642/"> <img src="assets/images/Dribbble.png" alt="meetup groups"> </a>
+      <a target="_blank" href="http://www.meetup.com/es-ES/members/87421642/"> <img src="assets/images/Dribbble.png" alt="meetup groups"> </a>
     </li>
   </ul>
 </div>
