--- a/index.html
+++ b/index.html
@@ -2,41 +2,52 @@
 layout: default
 ---
 
-<div id="presentation-card">
-  <h1>Marcos Bellucci</h1>
+<div class="row">
+  <div class="col-sm-3 col-lg-4"></div>
+  <div id="presentation-card" class="col-xs-12 col-sm-6 col-lg-4">
+    <div class="row">
+      <h1>Marcos Bellucci</h1>
+    </div>
 
-  <p>
-    I'm a software developer from Montevideo, Uruguay working on RoR since 2014.
-  </p>
-  <p>
-    I believe agile methodologies are the real formula to build reliable software.
-  </p>
-  <p>
-    I enjoy writing, sharing, discussing code and learning everyday.
-  </p>
+    <div class="row">
+      <p>
+        I'm a software developer from Montevideo, Uruguay working on RoR since 2014.
+      </p>
+      <p>
+        I believe agile methodologies are the real formula to build reliable software.
+      </p>
+      <p>
+        I enjoy writing, sharing, discussing code and learning everyday.
+      </p>
+    </div>
+    <div class="row">
+      <ul class="social-icons">
+        <li>
+          <a target="_blank" href="https://twitter.com/delbetu"> <img src="assets/images/Twitter.png" alt="twitter"> </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/delbetu"> <img src="assets/images/GitHub.png" alt="github"> </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918"> <img src="assets/images/LinkedIn.png" alt="linkedin"> </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/delbetu/resume/blob/master/resume.pdf"> <img src="assets/images/DailyBooth.png" alt="resume"> </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://github.com/delbetu/todo-app"> <img src="assets/images/Flickr.png" alt="sample code"> </a>
+        </li>
+        <li>
+          <a target="_blank" href="http://www.meetup.com/es-ES/members/87421642/"> <img src="assets/images/Dribbble.png" alt="meetup groups"> </a>
+        </li>
+      </ul>
+    </div>
 
-  <ul class="social-icons">
-    <li>
-      <a target="_blank" href="https://twitter.com/delbetu"> <img src="assets/images/Twitter.png" alt="twitter"> </a>
-    </li>
-    <li>
-      <a target="_blank" href="https://github.com/delbetu"> <img src="assets/images/GitHub.png" alt="github"> </a>
-    </li>
-    <li>
-      <a target="_blank" href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918"> <img src="assets/images/LinkedIn.png" alt="linkedin"> </a>
-    </li>
-    <li>
-      <a target="_blank" href="https://github.com/delbetu/resume/blob/master/resume.pdf"> <img src="assets/images/DailyBooth.png" alt="resume"> </a>
-    </li>
-    <li>
-      <a target="_blank" href="https://github.com/delbetu/todo-app"> <img src="assets/images/Flickr.png" alt="sample code"> </a>
-    </li>
-    <li>
-      <a target="_blank" href="http://www.meetup.com/es-ES/members/87421642/"> <img src="assets/images/Dribbble.png" alt="meetup groups"> </a>
-    </li>
-  </ul>
-
-  <a href="#" class="hire-me">Contact Me!</a>
+    <div class="row">
+      <a href="#" class="hire-me">Contact Me!</a>
+    </div>
+  </div>
+  <div class="col-sm-3 col-lg-4"></div>
 </div>
 
 <div class="overlay">
@@ -63,4 +74,3 @@ layout: default
     <input type="hidden" name="_next" value="{{ page.url }}"></input>
   </form>
 </div>
-
