Enhance font size for description

--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@ layout: default
 
     <div class="row">
       <p>
-        I'm a software developer from Montevideo, Uruguay working on RoR since 2014.
-      </p>
-      <p>
-        I believe agile methodologies are the real formula to build reliable software.
-      </p>
-      <p>
-        I enjoy writing, sharing, discussing code and learning everyday.
+        I'm a software developer from Montevideo, Uruguay working on RoR since 2014.<br>
+        I believe agile methodologies are the real formula to build reliable software.<br>
+        I enjoy writing, sharing, discussing code and learning everyday.<br>
       </p>
     </div>
 
