Add tooltips for social links

--- a/index.html
+++ b/index.html
@@ -17,12 +17,30 @@ layout: default
     </div>
 
     <div class="row text-center social-icons">
-      <a href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a>
-      <a href="https://twitter.com/delbetu" target="_blank"><i class="fa fa-2x fa-twitter"></i></a>
-      <a href="https://github.com/delbetu/resume/blob/master/resume.pdf" target="_blank" > <i class="fa fa-2x fa-book"></i> </a>
-      <a href="https://github.com/delbetu/todo-app" target="_blank" > <i class="fa fa-2x fa-pencil"> </i> </a>
-      <a href="https://github.com/delbetu" target="_blank"><i class="fa fa-2x fa-github"></i></a>
-      <a href="http://www.meetup.com/es-ES/members/87421642/" target="_blank" > <i class="fa fa-2x fa-group"></i> </a>
+      <a target="_blank" data-toggle="tooltip" title="Linkedin"
+        href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918">
+        <i class="fa fa-2x fa-linkedin"></i>
+      </a>
+      <a target="_blank" data-toggle="tooltip" title="Twitter"
+        href="https://twitter.com/delbetu" >
+        <i class="fa fa-2x fa-twitter"></i>
+      </a>
+      <a target="_blank" data-toggle="tooltip" title="Resume"
+        href="https://github.com/delbetu/resume/blob/master/resume.pdf">
+        <i class="fa fa-2x fa-book"></i>
+      </a>
+      <a target="_blank" data-toggle="tooltip" title="Sample Code"
+        href="https://github.com/delbetu/todo-app">
+        <i class="fa fa-2x fa-pencil"></i>
+      </a>
+      <a target="_blank" data-toggle="tooltip" title="Github"
+        href="https://github.com/delbetu">
+        <i class="fa fa-2x fa-github"></i>
+      </a>
+      <a target="_blank" data-toggle="tooltip" title="Meetup"
+        href="http://www.meetup.com/es-ES/members/87421642/">
+        <i class="fa fa-2x fa-group"></i>
+      </a>
     </div>
 
     <div class="row">
