Move contact_me scroll animation to main js file.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
     </div>
 
     <div class="row">
-      <a href="#" class="hire-me" onclick="$('html, body').animate({scrollTop: $(window).height()},2000);">Contact Me!</a>
+      <a href="#" class="hire-me">Contact Me!</a>
     </div>
   </div>
 
