Fix scroll and centering of text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="container">
+<div class="container text-center">
   <div id="presentation-card" class="row full-screen">
     <div class="row">
       <h1>Marcos Bellucci</h1>
@@ -16,7 +16,7 @@ layout: default
       </p>
     </div>
 
-    <div class="row text-center social-icons">
+    <div class="row social-icons">
       <a target="_blank" data-toggle="tooltip" title="Linkedin"
         href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918">
         <i class="fa fa-2x fa-linkedin"></i>
