Move section related styles to new sass file. And add titles on sections

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="container text-center">
-  <div id="presentation-card" class="row full-screen">
+  <div id="presentation-card" class="row full-screen section">
     <div class="row">
       <h1>Marcos Bellucci</h1>
     </div>
@@ -51,7 +51,8 @@ layout: default
     </div>
   </div>
 
-  <div class="row full-screen sample-code-container">
+  <div class="row full-screen section dark">
+    <h2 class="section-title">Sample Code</h2>
     <div class="sample-code-card">
       <h2> Task Logger (Ruby + Rspec)</h2>
       <a href="https://github.com/delbetu/task_logger">View on Github</a>
@@ -80,9 +81,9 @@ layout: default
     </div>
   </div>
 
-  <div class="row full-screen contact-form-container">
+  <div class="row full-screen section">
+    <h2 class="section-title">Get in touch</h2>
     <form action="//formspree.io/delbetu@gmail.com" method="POST" id="contact-form">
-      <h2>Get in touch</h2>
 
       <input class="form-group form-control" type="email" name="from" placeholder="Email address" required>
 
