Add meetup icon, Add dev.to link.

--- a/index.html
+++ b/index.html
@@ -25,25 +25,38 @@ layout: default
         href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918">
         <i class="fa fa-2x fa-linkedin"></i>
       </a>
+
       <a target="_blank" data-toggle="tooltip" title="Twitter"
         href="https://twitter.com/delbetu" >
         <i class="fa fa-2x fa-twitter"></i>
       </a>
+
       <a target="_blank" data-toggle="tooltip" title="Resume"
         href="https://github.com/delbetu/resume/blob/master/resume.pdf">
         <i class="fa fa-2x fa-book"></i>
       </a>
+
       <a id="sample-code-link" href="#" data-toggle="tooltip" title="Sample Code">
         <i class="fa fa-2x fa-pencil"></i>
       </a>
+
       <a target="_blank" data-toggle="tooltip" title="Github"
         href="https://github.com/delbetu">
         <i class="fa fa-2x fa-github"></i>
       </a>
+
       <a target="_blank" data-toggle="tooltip" title="Meetup"
         href="http://www.meetup.com/es-ES/members/87421642/">
-        <i class="fa fa-2x fa-group"></i>
+        <i class="fa fa-2x fa-meetup"></i>
       </a>
+
+      <a target="_blank" data-toggle="tooltip" title="Dev.to"
+        href="https://dev.to/delbetu">
+        <img class="invert-svg-color fix-margin"
+        src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
+        alt="M Bellucci's DEV Profile" height="28" width="24" />
+      </a>
+
     </div>
 
     <div class="row">
