--- a/index.html
+++ b/index.html
@@ -10,34 +10,39 @@ layout: default
 
     <div class="row">
       <p>
-        I'm a software developer from Montevideo, Uruguay working on RoR since 2014.<br>
-        I enjoy writing, sharing, discussing code and learning everyday.<br>
-        I prefer to be more a professional rather than a rockstar programmer.<br>
-        I like working with high skilled professionals who help me grow.<br>
-        I don't like time pressures because usually drives developers to deliver bad code.<br>
-        I like to learn new technologies. Currently interested in functional programming.<br>
-        I like to spend time in side projects in order to keep learning.<br>
+      Looking for a web-developer able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software.</br>
+      Someone who can help your team to build the right product <strong>focused on the end-user's</strong> needs ?
+      </p>
+      <p>
+      Check the links below for more information about me.
       </p>
     </div>
 
     <div class="row social-icons">
+      <a target="_blank" data-toggle="tooltip" title="Resume"
+        href="/resume">
+        <i class="fa fa-2x fa-book"></i>
+      </a>
+
       <a target="_blank" data-toggle="tooltip" title="Linkedin"
-        href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918">
+        href="https://www.linkedin.com/in/marcos-bellucci-fratti-76b07918/?locale=en_US">
         <i class="fa fa-2x fa-linkedin"></i>
+      </a>
+
+      <a target="_blank" data-toggle="tooltip" title="Dev.to"
+        href="https://dev.to/delbetu">
+        <img class="invert-svg-color fix-margin"
+        src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
+        alt="M Bellucci's DEV Profile" height="28" width="24" />
+      </a>
+
+      <a id="sample-code-link" href="#" data-toggle="tooltip" title="Sample Code">
+        <i class="fa fa-2x fa-pencil"></i>
       </a>
 
       <a target="_blank" data-toggle="tooltip" title="Twitter"
         href="https://twitter.com/delbetu" >
         <i class="fa fa-2x fa-twitter"></i>
-      </a>
-
-      <a target="_blank" data-toggle="tooltip" title="Resume"
-        href="https://github.com/delbetu/resume/blob/master/resume.pdf">
-        <i class="fa fa-2x fa-book"></i>
-      </a>
-
-      <a id="sample-code-link" href="#" data-toggle="tooltip" title="Sample Code">
-        <i class="fa fa-2x fa-pencil"></i>
       </a>
 
       <a target="_blank" data-toggle="tooltip" title="Github"
@@ -48,13 +53,6 @@ layout: default
       <a target="_blank" data-toggle="tooltip" title="Meetup"
         href="http://www.meetup.com/es-ES/members/87421642/">
         <i class="fa fa-2x fa-meetup"></i>
-      </a>
-
-      <a target="_blank" data-toggle="tooltip" title="Dev.to"
-        href="https://dev.to/delbetu">
-        <img class="invert-svg-color fix-margin"
-        src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg"
-        alt="M Bellucci's DEV Profile" height="28" width="24" />
       </a>
 
     </div>
