--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: default
 
     <div class="row">
       <p>
-      Looking for a web-developer able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software.</br>
+      Looking for a <strong>Software Engineer </strong> able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software.</br>
       Someone who can help your team to build the right product <strong>focused on the end-user's</strong> needs ?
       </p>
       <p>
-      Check the links below for more information about me.
+        <a href="#" class="hire-me" id="hire-me-button">Let's chat!</a>
       </p>
     </div>
 
@@ -56,10 +56,6 @@ layout: default
       </a>
 
     </div>
-
-    <div class="row">
-      <a href="#" class="hire-me" id="hire-me-button">Contact Me!</a>
-    </div>
   </div>
 
   <div class="row full-screen section dark">
@@ -100,7 +96,7 @@ layout: default
 
       <input class="form-group form-control" type="text" name="name" placeholder="Name">
 
-      <textarea class="form-group form-control" name="message-body" rows="8" cols="40" placeholder="Write your message here..."></textarea>
+      <textarea class="form-group form-control" name="message-body" rows="8" cols="40" placeholder="Your message ..."></textarea>
 
       <button type="submit" class="btn btn-lg btn-primary">Send</button>
       <input type="hidden" name="_next" value="{{ page.url }}"></input>
