--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@ layout: default
 
     <div class="row">
       <p>
-      Looking for a <strong>Software Engineer </strong> able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software.</br>
-      Someone who can help your team to build the right product <strong>focused on the end-user's</strong> needs ?
-      </p>
-      <p>
-        <a href="#" class="hire-me" id="hire-me-button">Let's chat!</a>
+      Looking for a <strong>Software Engineer </strong> able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software.<br/>
+      Someone who can help your team to build the right product <strong>focused on the end-user's</strong> needs ?<br/>
+      Drop me an email <a href="mailto:delbetu@gmail.com">delbetu@gmail.com</a>
       </p>
     </div>
 
@@ -55,6 +53,10 @@ layout: default
         <i class="fa fa-2x fa-meetup"></i>
       </a>
 
+    </div>
+
+    <div class="row">
+      <a href="#" class="hire-me" id="hire-me-button">Contact Me!</a>
     </div>
   </div>
 
