--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ layout: default
 
     <div class="row">
       <p>
-      Looking for a <strong>Software Engineer </strong> able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software.<br/>
-      Someone who can help your team to build the right product <strong>focused on the end-user's</strong> needs ?<br/>
+      Are you looking for a <strong>Software Engineer </strong> able to deliver <strong>robust</strong>(less-buggy), <strong>readable</strong>, <strong>maintainable</strong> software?<br/>
+      Someone who can help your team to build the right product <strong>focused on the end-user's</strong> needs?<br/>
       Drop me an email <a href="mailto:delbetu@gmail.com">delbetu@gmail.com</a>
       </p>
     </div>
